--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,7 +54,7 @@ header {
     display: flex;
     align-items: center;
 }
-
+/*
 main {
     padding: 100px 20px;
 }
@@ -64,10 +64,9 @@ main {
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
-    padding-right: 20%;
-    padding-left: 20%;
-    height: 1300px;
-    
+    padding-right: 15%;
+    padding-left: 15%;
+    height: 1300px;    
 }
 
 .accroche {
@@ -84,6 +83,7 @@ main {
     height: 360px;
     width: 400px;
     border-radius: 10px;
+    margin: 1rem;
 }
 
 .games h2 {
@@ -115,6 +115,7 @@ main {
     height: 360px;
     width: 400px;
     border-radius: 10px;
+
 }
 
 .rank h2 {
@@ -142,9 +143,16 @@ main {
 
 .choice {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    padding: 20%;
+    width: 100%;
+    height: 50%;
+}
+
+@media (max-width:768px) {
+    .choice {
+        flex-direction: column;
+    }
 }
 
 .text {
