--- a/CSS/jeux.css
+++ b/CSS/jeux.css
@@ -1,58 +1,27 @@
 .gamePage {
-    font-family: Arial, sans-serif;
-    display: grid;
-    column-gap: 100px;
-    grid-template-columns: repeat(3, 300px);
-    justify-content: center;
-    margin-top: 20px;
-}
-.titre-jeux {
-    grid-column: 1/-1;
-    text-align: center;
-    margin-bottom: 30px;
-}
-.container {
-    justify-content: center;
-    width: 300px;
-    height: 350px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: max-height 0.3s ease-in-out;
-    margin-left: 20px;
-    margin-right: 20px;
-    border: 4px solid #000;
-    background-color: #DEFBFF;
-}
-.image-container {
-    width: 100%;
-    height: 300px;
-    overflow: hidden;
-    margin-bottom: 20px;
-}
-.image-container img {
-    width: 100%;
-    display: block;
-}
-.text-spe {
-    padding: 15px;
-    color: #000;
-    display: none;
-    text-align: justify;
-}
-.text-spe button {
-    border: 2px solid #000;
-    border-radius: 5px;
-    background-color: #a5e7f0;
-    font-size: 20px;
-}
-.text-spe button:hover {
-    background-color: #48C6DA;
-}
-.container:hover {
-    height: 470px;
-}
-.container:hover .text-spe {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    padding: 8rem 15% 0;
     align-items: center;
+}
+
+.choice {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.container {
+    border: 3px solid #000;
+    border-radius: 10px;
+    align-items: center;
+    text-align: center;
+    max-width: 20rem;
+    padding: 10px 10px;
+}
+
+.container img {
+    width: 15rem;
 }
