--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,20 +1,37 @@
 .navbar {
     height: 80px;
     width: 100%;
+    background-color: #a5e7f0;
+    color: black;
+    display: flex;
+    justify-content: center;
+}
+
+.navbar-container {
+    height: 100%;
+    width: 100%;
+    max-width: 1100px;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .5rem .5rem;
-    background-color: #333;
-    color: white;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    padding-left: .5rem;
+    padding-right: 1.5rem;
+    
 }
 
 .navbar-left {
     height: 100%;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 2rem;
+}
+
+.navbar-logo {
+    height: 100%;
+    width: auto;
 }
 
 .navbar-logo img {
@@ -29,18 +46,18 @@
 
 .navbar-buttons {
     display: flex;
-    gap: 10px;
+    gap: 1.5rem;
 }
 
 .navbar-buttons .btn {
     background-color: #313eb3;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 8px 17px;
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s;
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 .navbar-buttons .btn:hover {
