--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,13 @@
-body {
+html, body {
+    min-height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #defbff;
     /*background-image: url(../Annexes/quadrillage.png);*/
+}
+
+.content {
+    min-height: 100%;
 }
 
 header {
