--- a/Components/header.html
+++ b/Components/header.html
@@ -6,4 +6,5 @@
     <link href="../CSS/style.css" rel="stylesheet" media="all">
     <link href="../CSS/navbar.css" rel="stylesheet" media="all">
     <link href="../CSS/footer.css" rel="stylesheet" media="all">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
