--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,9 @@
 html, body {
-    min-height: 100%;
+    min-height: 100vh;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #defbff;
     /*background-image: url(../Annexes/quadrillage.png);*/
-}
-
-.content {
-    min-height: 100%;
 }
 
 header {
