Transformation de toutes les pages en .php et ajout de la navbar et du footer partout

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,10 @@ html, body {
     /*background-image: url(../Annexes/quadrillage.png);*/
 }
 
+.content {
+    min-height: calc(100vh - 80px);
+}
+
 header {
     background-color: #a5e7f0;
     color: #000;
