--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,7 @@
 html, body {
+    width: 100%;
+    padding: 0;
+    overflow-x: hidden;
     min-height: 100vh;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
