--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -88,6 +88,7 @@
 @media (max-width: 768px) {
     .navbar {
         height: 60px;
+
     }
 
     .navbar-buttons {
@@ -98,4 +99,7 @@
         display: flex;
     }
 
+    .navbar-title a {
+        font-size: .8rem;
+    }
 }
