--- a/Components/header.html
+++ b/Components/header.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Human Benchmark</title>
     <link href="../CSS/style.css" rel="stylesheet" media="all">
     <link href="../CSS/navbar.css" rel="stylesheet" media="all">
