--- a/CSS/classement.css
+++ b/CSS/classement.css
@@ -1,9 +1,18 @@
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .gamePage {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 8rem 15% 0;
+    padding: 8rem 8% 0;
     align-items: center;
+    width: 100%;
+    max-width: 1100px;
 }
 
 .choice {
@@ -37,7 +46,7 @@
     margin: auto;
 }
 
-@media (max-width:1460px) {
+@media (max-width:976px) {
     .choice {
         flex-direction: column;
         align-items: center;
