--- a/CSS/accueil.css
+++ b/CSS/accueil.css
@@ -50,6 +50,11 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .homePage {
+        padding-left: 3%;
+        padding-right: 3%;
+    }
 }
 
 .text {
