--- a/CSS/connexion.css
+++ b/CSS/connexion.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    padding: 7rem;
+    padding: 5%;
 }
 
 .page-inscription form {
@@ -20,4 +20,29 @@
     position: relative;
     bottom: 0;
     right: 0;
+}
+
+.input-field {
+    max-width: 200px;
+}
+
+.formulaire {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 5%;
+    padding: 1rem;
+}
+
+.field {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: .75rem;
+}
+
+label {
+    font-weight: bold;
+    margin-bottom: .5rem;
 }
