--- a/CSS/inscription.css
+++ b/CSS/inscription.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
+    padding: 5%;
 }
 
 .page-inscription form {
@@ -11,6 +12,31 @@
     flex-direction: column;
     justify-content: space-between;
     min-height: 32rem;
+}
+
+.input-field {
+    max-width: 200px;
+}
+
+.formulaire {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 5%;
+    padding: 1rem;
+}
+
+.field {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: .75rem;
+}
+
+label {
+    font-weight: bold;
+    margin-bottom: .5rem;
 }
 
 /*--------------- Slider âge -------------*/
@@ -51,7 +77,6 @@
 }
 
 .output, .phoneNumber {
-    margin-top: 10px;
     font-size: 1.2em;
     color: #333;
 }
