--- a/CSS/jeu-reflexe.css
+++ b/CSS/jeu-reflexe.css
@@ -1,31 +1,52 @@
 .jeu-reflexe {
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    padding: 100px 0;
-    row-gap: 50px;
+    text-align: center;
 }
 
-.jeu-reflexe button {
+#reflButton {
     width: 100%;
     background-color: #48C6DA;
-    grid-column: 1/-1;
-}
-
-.jeu-reflexe p {
-    font-size: 20px;
 }
 
 .buttonImg {
-    height: 400px;
-}
-
-.stats {
-    margin-left: 100px;
-    border: 2px solid #000;
-    border-radius: 10px;
+    height: 25rem;
 }
 
 .infos {
-    margin-right: 100px;
+    display: flex;
+    flex-direction: row;
+    padding: 3rem 15%;
+    gap: 5rem;
+    text-align: left;
+}
+
+.stats {
+    width: 30rem;
+    border: 2px solid #000;
+    border-radius: 5px;
+}
+
+.text {
+    top: 30%;
+    min-width: 20rem;
+}
+
+@media (max-width:950px) {
+    .infos {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+}
+
+@media (max-width:500px) {
+    .buttonImg {
+        height: 15rem;
+    }
+    .stats {
+        width: 20rem;
+    }
 }
