--- a/CSS/jeu-visuel.css
+++ b/CSS/jeu-visuel.css
@@ -1,27 +1,38 @@
 .jeu-visuel {
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
-    align-items: center;
-    padding: 100px 0;
-    row-gap: 50px;
-}
-
-.zone-jeu {
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
-    background-color: #48C6DA;
-    grid-column: 1/-1;
-    padding: 20px 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     text-align: center;
 }
 
-#lvl {
-    margin-right: 40px;
+.zone-jeu {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    background-color: #48C6DA;
+    gap: 15%;
+    padding: 2rem;
+}
+
+#container-grille {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    
+}
+#container-grille h3 {
+    width: 100%;
+    overflow-wrap: break-word;
+    word-break: break-word;
 }
 
 .zone-jeu img {
-    height: 400px;
+    width: 200px;
+    height: auto;
 }
 
 .grille {
@@ -54,18 +65,39 @@
 
 #submit {
     margin-top: 40px;
-    margin-right: 40px;
     width: 60%;
     height: 30px;
 }
 
 .stats {
-    margin-left: 100px;
+    height: 30rem;
     border: 2px solid #000;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .infos {
     margin-top: 50px;
     margin-right: 100px;
+}
+
+@media (max-width:976px) {
+    .zone-jeu {
+        flex-direction: column;
+        align-items: center;
+    }
+    .zone-jeu img {
+        width: 15rem;
+    }
+    #start {
+        margin-bottom: 20px;
+    }
+    .infos {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .stats {
+        width: 20rem;
+        height: 20rem;
+    }
 }
