--- a/Components/footer.html
+++ b/Components/footer.html
@@ -1,3 +1,5 @@
+<!--Pied de page présent sur toutes les pages du site-->
+<!--Principalement décoratif : les liens redirigent vers la même page (hormis X et Instagram)-->
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-links">
@@ -10,8 +12,8 @@
         </div>
         <div class="footer-social">
             <a href="#" class="social-icon">Facebook</a>
-            <a href="#" class="social-icon">Twitter</a>
-            <a href="#" class="social-icon">Instagram</a>
+            <a href="https://x.com/Max_La_Menaace" class="social-icon">X (Twitter)</a>
+            <a href="https://www.instagram.com/maxx_la_menaace/" class="social-icon">Instagram</a>
         </div>
     </div>
 </footer>
